# codex-reset-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
codex_reset_proxy/: __init__.py  app.py  certs.py  config.py  outbound.py  proxy.py  server.py  socks_mitm.py  websocket_bridge.py
scripts/: install-ca-into-container.sh
tests/: test_proxy.py  test_socks_mitm.py
