[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-reset-proxy"
version = "0.1.0"
description = "A conservative reverse proxy that fast-fails and retries upstream requests before response headers arrive."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42,<47",
    "httpx[socks]>=0.28,<1",
    "starlette>=0.46,<1",
    "uvicorn[standard]>=0.34,<1",
    "websockets>=13,<16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.26,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
